@@ -1,3 +1,6 @@
+2011-03-05 j.m.reneau <renejm@users.sourceforge.net> 0.9.6.63
+	* Added replace dialog and refined find dialog
+
 2011-03-04 j.m.reneau <renejm@users.sourceforge.net> 0.9.6.62
 	* Added find dialog
 
